Fixed issue with header where search would drop out of the header on smaller browser widths

--- a/fid-web/src/main/webapp/style/sass/components/_header.scss
+++ b/fid-web/src/main/webapp/style/sass/components/_header.scss
@@ -150,7 +150,7 @@
 //---------------------------
 // MEDIA QUERIES
 //---------------------------
-@media (max-width: 1150px) {
+@media (max-width: 1162px) {
 	.global-header {
 		.nav-main .nav-list {
 			> li {
